[package]
name = "mess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.21.0"
serenity = "0.12.1"
tokio = { version = "1", features = ["full"] }
# reqwest = { version = "0.11", features = ["json"] }
# serde = { version = "1.0", features = ["derive"] }

